src/objects/Master_Rata__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Used for the store address</description>
        <label>Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Store category</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Used for the city name</description>
        <label>City</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <description>Used for the store name.</description>
        <label>Store Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Used for the term of the store. Maximum number of terms allowed.</description>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Master Rata</label>
    <nameField>
        <label>Master Rata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Ratas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>